main/static/main/CSS/style.css
body{
    /*background-color:#fafafa;*/
    margin-top: 10vh;
}
body.st{
    margin-top: 0;
}

/*           ------ writting for plant and Chemical Comound code --------*/
.plant-about {
    text-transform: capitalize;
    font-family: 'Roboto', sans-serif;
    font-size: 1.70em;
    font-weight: 500;
    color: #1f1f1f;
}

.chemical-title {
    font-family: 'Roboto', sans-serif;
    border-radius: 3px;
    font-size: 25px;
    margin: 20px 0;
    padding: 10px 20px;
    color: #050000;
    font-weight: 500;
}

.chemical-about {
    font-family: 'Roboto', sans-serif;
    padding:5px 0;
    font-size: 1.70em;
    font-weight: 500;
    color: #1f1f1f;
}

.chemical-recomand {
    font-family: 'Titillium Web', sans-serif;
    font-size: 17px;
    border-radius: 10px;
    background-color: #dae3e7;
    margin: 0 15px 15px 0;
    padding: 4px 16px;
    color: #161616;
}
.chemical-recomand:hover {
    background-color: #bbd6db;
    color: #0f002f;
    text-decoration: none;
}
.phytochem-found{
    font-size: larger;
    font-family: 'Roboto', sans-serif;
    font-weight: 500; 
}
em.plants-l{
    font-size: large;
    font-family: 'Roboto', sans-serif;
    font-weight: 500; 
}
.chemical-recomand-parent{
    overflow-y:auto;
    overflow-x:hidden;
    height: 3em;
}
.chemical-id-top a{
    text-decoration : none;
    font-family: 'Roboto', sans-serif;
    /* background-color: #2f0142; */
    background-color: #0f002f;
    color:white;
}
.chemical-id-top a:hover{
    background-color: #5c0681;
    color:white;
}

a.download-all-option{
    text-decoration : none;
    font-family: 'Roboto', sans-serif;
    background-color: #0f002f;
    color:white;
    letter-spacing: 0.05em;
    font-weight: 500;
}
a.download-all-option:hover{
    background-color: #5c0681;
    color:white;
}

.download-btn{
    background-color:#dae3e7;
    border-radius: 5px;
    border: none;
}
.download-btn:hover{
    background-color:#7cc4e6;
}
.download-type{
    background-color:#dae3e7;
    font-size: 18px;
    font-family: 'Titillium Web', sans-serif;
    border-radius: 5px;
    border: none;
}

a.stop-highlight{
    text-decoration: none;
    color: black;
}
    /* Added media Query for some page  */
@media screen and (max-width: 540px) {
  .chemical-about {
    font-size: 6vw;
  }
  .download-as-option{
      font-size: .90em;
  }
  a.download-all-option{
      font-size: 0.9em;
    }
    .plant-about {
        font-size: 1.30em;
    }
}

@media screen and (max-width: 540px) {
     .team-name{
        font-size: 1.75em !important;
     }
}

/*           ------ End plant and Chemical Comound code --------*/
.smile {
    min-width: 160px;
    max-width: 160px;
    white-space: normal;
    word-wrap: break-word;
}

.card {
    width: 100%;
    padding: 10px;
    margin: 10px;
}

/*Font contact */
.icon-background{
    color:#e1e1f6;
}

/*  ============Writting css for profile=========*/
/*Profile Title*/
.profile-title{
    /* font-family:  Helvetica,Arial,'sans-serif'; */
    /* font-family: 'Poppins', sans-serif; */
    font-family: 'Roboto', sans-serif;
    font-size: 1.90em;
    font-weight: 600;
}
.profile-info{
        /* font-family:  Helvetica,Arial,'sans-serif'; */
        /* font-family: 'Poppins', sans-serif; */
        font-family: 'Roboto', sans-serif;
        font-size: 1.5em;
        font-weight: 600;
        letter-spacing: 0.03em;
        color: #747474;
}
.type-of-info{
     font-family:  Helvetica,Arial,'sans-serif';
     /* font-family: 'Poppins', sans-serif; */
     /* font-family: 'Roboto', sans-serif; */
     font-size: 1em;
     color: #2e2e2e;
}
.user-name{
     /* font-family:  Helvetica,Arial,'sans-serif'; */
     font-family: 'Poppins', sans-serif;
     /* font-family: 'Roboto', sans-serif; */
     font-size: 1em;
}

